# how-to

./: README.md
deploy-with-databricks/: .gitignore  databricks.yml  pyproject.toml
deploy-with-databricks/.github/: CODEOWNERS
deploy-with-databricks/.github/workflows/: deploy.yml  release.yml  validation.yml
deploy-with-databricks/resources/: general_agent.experiment.yml  general_agent.model.yml  summarization.experiment.yml  summarization.model.yml  summarization.serving.yml  testingapp.app.yml  training_agent.job.yml  training_summarization.job.yml
deploy-with-databricks/src/: agent_train.py  train.ipynb
deploy-with-databricks/src/databricks_asset_bundle/: __init__.py
deploy-with-databricks/src/databricks_asset_bundle/large_language_model/: lc_model.py  lg_agent.py
deploy-with-databricks/src/ui_app/: app.yml
deploy-with-databricks/tests/: test_main.py
deploy-with-kubernetes/app/: Dockerfile
extract-with-document-intelligence/: .env.example  .gitignore  README.md  requirements.txt
extract-with-document-intelligence/docs/: data-residency.md  performance-scalability-observability.md  resilience-and-dr.md  resources.md  security-privacy-compliance.md
extract-with-document-intelligence/notebooks/: 00-setup-and-basics.ipynb  01-read-model.ipynb  02-layout-model.ipynb  03-prebuilt-invoice.ipynb  04-prebuilt-receipt.ipynb  05-prebuilt-id-document.ipynb  07-custom-model.ipynb  (+5 more)
govern-with-governance-toolkit/: .env.template  .envrc  .gitignore  README.md  pyproject.toml
govern-with-governance-toolkit/notebooks/: 01-setup-and-intro.ipynb  02-agt-authorization.ipynb  03-agt-behavior.ipynb  04-natural-language-agents.ipynb  05-policy-violations.ipynb  06-foundry-deployment.ipynb
govern-with-governance-toolkit/scripts/: demo_ai_agent.py  deploy_to_foundry.py  validate_deployment.py
govern-with-governance-toolkit/src/: __init__.py  config.py  mock_data.py  models.py  observability.py
govern-with-governance-toolkit/src/agents/: __init__.py  base.py  customer_service.py  inventory.py  order_processing.py  returns.py
govern-with-governance-toolkit/src/governance/: __init__.py  enforcer.py
govern-with-governance-toolkit/src/policies/: README.md  authorization.yaml  behavior.yaml
govern-with-governance-toolkit/tests/test_policies/: test_authorization.py  test_behavior.py
govern-with-open-policy/: .env.template  .gitignore  AZURE_OPENAI_INTEGRATION.md  README.md  docker-compose.yml  pyproject.toml
govern-with-open-policy/.foundry/: Dockerfile.template  README.md
govern-with-open-policy/.github/: copilot-instructions.md
govern-with-open-policy/docs/: AI_AGENT_PATTERN.md  ARCHITECTURE.md  CLEANUP_SUMMARY.md  OPA_VS_AGENT_GOVERNANCE.md  QUICKSTART.md  README.md
govern-with-open-policy/notebooks/: 01-setup-and-intro.ipynb  02-opa-authorization.ipynb  03-opa-behavior.ipynb  04-natural-language-agents.ipynb  05-policy-violations.ipynb  06-foundry-deployment.ipynb
govern-with-open-policy/scripts/: demo_ai_agent.py  deploy_to_foundry.py  verify_workshop.py
govern-with-open-policy/src/: __init__.py  config.py  mock_data.py  models.py  observability.py  opa.py  policy.py  server.py
govern-with-open-policy/src/agents/: __init__.py  base.py  customer_service.py  inventory.py  order_processing.py  returns.py
govern-with-open-policy/src/policies/: README.md  authorization.rego  behavior.rego
govern-with-open-policy/tests/: __init__.py
govern-with-open-policy/tests/test_agents/: test_agent_behavior.py
govern-with-open-policy/tests/test_policies/: test_authorization.py
manage-with-unity-catalog/: README.md  requirements.txt
track-with-mlflow/: MLProject  environment.yaml  requirements.txt
(+20 files in other folders)
