[project]
name = "retail-agent-policy-workshop"
version = "0.1.0"
description = "Workshop demonstrating OPA-A and OPA-B policy enforcement in retail AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects>=1.0.0b7",
    "azure-identity>=1.19.0",
    "azure-ai-inference>=1.0.0b5",
    "openai>=1.54.0",
    "requests>=2.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "rich>=13.9.0",
    "agent-framework>=1.6.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
notebooks = [
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
]
all = [
    "retail-agent-policy-workshop[dev,notebooks]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
